ingress-files/locust-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust
  namespace: locust
  labels:
    app.kubernetes.io/name: locust
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - locust.prod.mehmetkanus.com
      secretName: tls-locust
  rules:
    - host: locust.prod.mehmetkanus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:   locust 
                port:
                  number: 8089
